2003-12-16  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.c (mips_file_end): Only write symbols that have
	been referenced at some point.

2003-12-16  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.c: Include langhooks.h
	(mips_build_builtin_va_list): Use lang_hooks.types.make_type.

2003-12-16  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR optimization/13313
	* combine.c (make_extraction) [REG]: Do not use
	gen_lowpart_for_combine when POS is non-zero.

2003-12-16  Hartmut Penner  <hpenner@de.ibm.com>

	* altivec.h (vec_cmple, vec_all_numeric): Fix typo.
	* testsuite/gcc.dg/altivec-10.c: Test for above.
	
2003-12-15  David O'Brien  <obrien@FreeBSD.org>

	* Makefile.in (CPPFLAGS): Initialize from configure.

2003-12-15  Roger Sayle  <roger@eyesopen.com>

	PR middle-end/13400
	* ifcvt.c (noce_process_if_block): Disable unconditional write
	optimizations if we could introduce a store to trapping memory
	that wasn't present previously.

2003-12-15  Kazu Hirata  <kazu@cs.umass.edu>

	* system.h (DEFAULT_CALLER_SAVES): Poison.
	* toplev.c (flag_caller_saves): Always initialize with 0.
	* doc/tm.texi (DEFAULT_CALLER_SAVES): Remove.

2003-12-15  Kazu Hirata  <kazu@cs.umass.edu>

	* flow.c (EXIT_IGNORE_STACK): Move to ...
	* defaults.h (EXIT_IGNORE_STACK): ... here.
	* dojump.c (clear_pending_stack_adjust): Don't use #ifdef
	EXIT_IGNORE_STACK.
	* function.c (expand_function_end): Likewise.
	* global.c (global_alloc): Likewise.
	* ra.c (init_ra): Likewise.
	* reload1.c (init_elim_table): Likewise.
	* reorg.c (fill_simple_delay_slots): Likewise.
	* resource.c (init_resource_info): Likewise.
	* doc/tm.texi (EXIT_IGNORE_STACK): Document that the default
	is 0.

2003-12-15  J"orn Rennecke <joern.rennecke@superh.com>

	* reload.c (reg_overlap_mentioned_for_reload_p):
	When looking at a PLUS in X, avoid spuriously returning nonzero
	when IN is a REG or another simple PLUS, or a MEM containing one.
